Insert vào sheet

--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -286,7 +286,7 @@ html(style='font-size: 16px;' lang='en')
                           S27.553,13,27,13z')
                     h5.u-custom-font.u-font-lato.u-text.u-text-1 Truyền thông
                     p.u-text.u-text-2 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-1(href='/DangKy/TruyenThong' data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='') TÌM HIỂU NGAY
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-1(href='/DangKy/TruyenThong/' data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='') TÌM HIỂU NGAY
             .u-size-20.u-size-30-md
               .u-layout-col
                 .u-align-center.u-container-style.u-layout-cell.u-size-40.u-white.u-layout-cell-3
@@ -295,7 +295,7 @@ html(style='font-size: 16px;' lang='en')
                       img(src='public/source/images/2083199-32dc92f1.png' alt='')
                     h5.u-custom-font.u-font-montserrat.u-text.u-text-palette-1-base.u-text-3 TRAINING
                     p.u-text.u-text-palette-5-dark-2.u-text-4 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-grey-60.u-border-black.u-border-hover-grey-60.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-color.u-btn-2(href='/DangKy/Training')  TÌM HIỂU NGAY
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-grey-60.u-border-black.u-border-hover-grey-60.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-color.u-btn-2(href='/DangKy/Training/')  TÌM HIỂU NGAY
                 .u-container-style.u-hidden-sm.u-hidden-xs.u-layout-cell.u-size-20.u-layout-cell-4
                   .u-container-layout.u-container-layout-4
             .u-size-20.u-size-60-md
@@ -308,7 +308,7 @@ html(style='font-size: 16px;' lang='en')
                       img(src='public/source/images/5037189-8708eb5f.png' alt='')
                     h5.u-custom-font.u-font-montserrat.u-text.u-text-5 KHÁC
                     p.u-text.u-text-6 Mô tả công việc
-                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-3(href='/DangKy/Khac')  TÌM HIỂU NGAY
+                    a.u-active-none.u-align-center.u-border-1.u-border-active-palette-1-light-2.u-border-hover-palette-1-light-2.u-border-white.u-btn.u-button-style.u-custom-font.u-font-roboto.u-hover-none.u-none.u-text-body-alt-color.u-btn-3(href='/DangKy/Khac/')  TÌM HIỂU NGAY
     style.u-overlap-style.
       .u-overlap:not(.u-sticky-scroll) .u-header {
       background-color: #2799b1 !important
