Fix insert thông tin

--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -25,48 +25,23 @@ html(style='font-size: 16px;' lang='en')
   body.u-body.u-xl-mode(data-lang='en')
     header#sec-9c34.u-clearfix.u-header.u-palette-1-dark-1.u-sticky.u-sticky-cf2b(data-animation-name='' data-animation-duration='0' data-animation-delay='0' data-animation-direction='')
       .u-clearfix.u-sheet.u-sheet-1
-        a.u-image.u-logo.u-image-1(href='https://nicepage.com' data-image-width='1080' data-image-height='1080')
+        a.u-image.u-logo.u-image-1(href='/' data-image-width='1080' data-image-height='1080')
           img.u-logo-image.u-logo-image-1(src='public/source/images/Logo.png')
         p.u-align-left.u-custom-font.u-font-raleway.u-text.u-text-1
           span.u-text-white Ban Học Tập
           br
           span.u-text-white Khoa Học và Kỹ thuật Thông tin
-        nav.u-menu.u-menu-one-level.u-offcanvas.u-menu-1
-          .menu-collapse.u-custom-font.u-font-roboto(style='font-weight: 700; font-size: 1.25rem;')
-            a.u-button-style.u-custom-text-color.u-nav-link(href='#')
-              svg.u-svg-link(viewBox='0 0 24 24')
-                use(xlink:href='#svg-68c6')
-              svg#svg-68c6.u-svg-content(version='1.1' viewBox='0 0 16 16' x='0px' y='0px' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg')
-                g
-                  rect(y='1' width='16' height='2')
-                  rect(y='7' width='16' height='2')
-                  rect(y='13' width='16' height='2')
-          .u-custom-menu.u-nav-container
-            ul.u-custom-font.u-font-roboto.u-nav.u-unstyled.u-nav-1
-              li.u-nav-item
-                a.u-button-style.u-nav-link.u-text-body-alt-color(href='Các-hoạt-động.html') Các hoạt động
-              li.u-nav-item
-                a.u-button-style.u-nav-link.u-text-body-alt-color(href='Home.html') Home
-          .u-custom-menu.u-nav-container-collapse
-            .u-black.u-container-style.u-inner-container-layout.u-opacity.u-opacity-95.u-sidenav
-              .u-inner-container-layout.u-sidenav-overflow
-                .u-menu-close
-                ul.u-align-center.u-nav.u-popupmenu-items.u-unstyled.u-nav-2
-                  li.u-nav-item
-                    a.u-button-style.u-nav-link(href='Các-hoạt-động.html') Các hoạt động
-                  li.u-nav-item
-                    a.u-button-style.u-nav-link(href='Home.html') Home
-            .u-black.u-menu-overlay.u-opacity.u-opacity-70
+
     section#carousel_cb7b.u-align-center.u-clearfix.u-grey-5.u-section-1
       .u-clearfix.u-sheet.u-sheet-1
         h2.u-align-left.u-custom-font.u-font-montserrat.u-text.u-text-palette-1-base.u-text-1
-          span.u-text-custom-color-1  Bạn cần tìm
+          span.u-text-custom-color-1  Bạn cần tìm 
           span.u-text-custom-color-1
           | những điều mới lạ
           br
           | phát triển 
           span.u-text-custom-color-1
-            span.u-text-palette-1-base bản thân
+            span.u-text-palette-1-base bản thân 
           span.u-text-custom-color-1 thời Đại học?
         .u-clearfix.u-expanded-width.u-gutter-30.u-layout-wrap.u-layout-wrap-1
           .u-gutter-0.u-layout
