Thêm ràng buộc dữ liệu

--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -30,7 +30,7 @@ html(style='font-size: 16px;' lang='en')
         p.u-align-left.u-custom-font.u-font-raleway.u-text.u-text-1
           span.u-text-white Ban Học Tập
           br
-          span.u-text-white Khoa Học và Kỹ thuật Thông tin
+          span.u-text-white(style="color: #2799b1 !important") Khoa Học và Kỹ thuật Thông tin
 
     section#carousel_cb7b.u-align-center.u-clearfix.u-grey-5.u-section-1
       .u-clearfix.u-sheet.u-sheet-1
