--- a/public/source/css/nicepage.css
+++ b/public/source/css/nicepage.css
@@ -24878,13 +24878,13 @@ section.u-palette-1-dark-1:before,
 .u-palette-1-dark-1.u-sidenav:before,
 .u-container-layout.u-container-layout.u-palette-1-dark-1:before,
 .u-table-alt-palette-1-dark-1 tr:nth-child(even) {
-  color: #ffffff;
-  background-color: #2799b1;
+  color: black;
+  background-color: white;
 }
 .u-button-style.u-palette-1-dark-1,
 .u-button-style.u-palette-1-dark-1[class*="u-border-"] {
-  color: #ffffff !important;
-  background-color: #2799b1 !important;
+  color: black !important;
+  background-color: white !important;
 }
 .u-button-style.u-palette-1-dark-1:hover,
 .u-button-style.u-palette-1-dark-1[class*="u-border-"]:hover,
@@ -36623,7 +36623,7 @@ li.active > a.u-button-style.u-text-white,
 li.active > a.u-button-style.u-text-white[class*="u-border-"],
 a.u-button-style.u-text-white,
 a.u-button-style.u-text-white[class*="u-border-"] {
-  color: #ffffff !important;
+  color: black !important;
 }
 a.u-button-style.u-text-white:hover,
 a.u-button-style.u-text-white[class*="u-border-"]:hover,
