--- a/public/XetTuyen.pug
+++ b/public/XetTuyen.pug
@@ -33,7 +33,7 @@ html(style='font-size: 16px;' lang='en')
         p.u-align-left.u-custom-font.u-font-raleway.u-text.u-text-1
           span.u-text-white Ban Học Tập
           br
-          span.u-text-white Khoa Học và Kỹ thuật Thông tin
+          span.u-text-white(style="color: #2799b1 !important") Khoa Học và Kỹ thuật Thông tin
 
     if(vitri == "Training")
       - var position = 'Training'
@@ -43,7 +43,7 @@ html(style='font-size: 16px;' lang='en')
       - var position = 'Khác'
     section#sec-93d4.u-clearfix.u-section-1
       .u-clearfix.u-sheet.u-sheet-1
-        h1.u-custom-font.u-font-roboto.u-text.u-text-default.u-text-1 Đăng ký phỏng vấn - vị trí #{position}
+        h1.u-custom-font.u-font-roboto.u-text.u-text-default.u-text-1 Đăng ký phỏng vấn vào Ban Học Tập
     section#carousel_15a9.u-align-center.u-clearfix.u-section-2
       .u-clearfix.u-sheet.u-sheet-1
         .u-clearfix.u-expanded-width.u-gutter-20.u-layout-wrap.u-layout-wrap-1
@@ -71,14 +71,13 @@ html(style='font-size: 16px;' lang='en')
                       .u-form-email.u-form-group.u-label-none
                         label.u-custom-font.u-font-roboto.u-label.u-label-2(for='email-716f') Lớp sinh hoạt
                         input#email-716f.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='email' placeholder='Nhập vào lớp sinh hoạt (VD: CNTT2022)' name='LopSV' required='')
-
+                      .u-form-email.u-form-group.u-label-none
+                        label.u-custom-font.u-font-roboto.u-label.u-label-2(for='email-716f') Facebook
+                        input#email-716f.u-border-1.u-border-grey-30.u-input.u-input-rectangle.u-white(type='email' placeholder='Nhập vào đường dẫn Facebook của bạn' name='FacebookURL' required='')
               .u-container-style.u-layout-cell.u-shape-rectangle.u-size-38.u-layout-cell-2
                 .u-container-layout.u-container-layout-2
                   .u-form.u-form-2
                     form.u-clearfix.u-form-spacing-15.u-form-vertical.u-inner-form(action='#' style='padding: 0;' source='custom' name='form' id='formElem2')
-                      .u-form-email.u-form-group.u-form-group-4
-                        label.u-custom-font.u-font-roboto.u-label.u-label-3(for='email-a142') Facebook
-                        input#email-a142.u-border-1.u-border-grey-25.u-border-no-left.u-border-no-right.u-border-no-top.u-input.u-input-rectangle.u-white.u-input-3(type='url' placeholder='Nhập vào đường dẫn Facebook của bạn' name='FacebookURL' required='')
                       .u-form-group.u-form-message.u-form-group-5
                         label.u-custom-font.u-font-roboto.u-label.u-label-4(for='name-f2a8') Tại sao bạn lại chọn tham gia Ban Học Tập?
                         textarea#name-f2a8.u-border-1.u-border-grey-25.u-border-no-left.u-border-no-right.u-border-no-top.u-input.u-input-rectangle.u-white.u-input-4(placeholder='Lý do của bạn là...' rows='6' cols='50' name='LyDoThamGia' required='required')
