Fix khoảng cách chữ XetTuyen.pug

--- a/public/XetTuyen.pug
+++ b/public/XetTuyen.pug
@@ -43,10 +43,10 @@ html(style='font-size: 16px;' lang='en')
       - var position = 'Khác'
     section#sec-93d4.u-clearfix.u-section-1
       .u-clearfix.u-sheet.u-sheet-1
-        h1.u-custom-font.u-font-roboto.u-text.u-text-default.u-text-1 Đăng ký phỏng vấn vào Ban Học Tập
+        h1.u-custom-font.u-font-roboto.u-text.u-text-default.u-text-1(style='margin-top: 0px') Đăng ký tham gia vào Ban Học Tập
     section#carousel_15a9.u-align-center.u-clearfix.u-section-2
       .u-clearfix.u-sheet.u-sheet-1
-        .u-clearfix.u-expanded-width.u-gutter-20.u-layout-wrap.u-layout-wrap-1
+        .u-clearfix.u-expanded-width.u-gutter-20.u-layout-wrap.u-layout-wrap-1(style='margin-top: 0px')
           .u-layout
             .u-layout-row
               .u-align-center.u-container-style.u-layout-cell.u-palette-4-base.u-size-22.u-layout-cell-1
