--- a/public/GioiThieu.pug
+++ b/public/GioiThieu.pug
@@ -8,6 +8,7 @@ html(style='font-size: 16px;' lang='en')
     title Các hoạt động
     link(rel='stylesheet' href='public/source/css/nicepage.css' media='screen')
     link(rel='stylesheet' href='public/source/css/GioiThieu.css' media='screen')
+    link(rel='icon' href='/public/source/images/Logo.png')
     script.u-script(type='text/javascript' src='public/source/js/jquery.js' defer='')
     script.u-script(type='text/javascript' src='public/source/js/nicepage.js' defer='')
     link#u-theme-google-font(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i')
