--- a/public/XetTuyen.pug
+++ b/public/XetTuyen.pug
@@ -3,11 +3,13 @@ html(style='font-size: 16px;' lang='en')
   head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
-    meta(name='keywords' content='Đăng ký phỏng vấn - vị trí $position')
+    meta(name='keywords' content='Đăng ký phỏng vấn')
     meta(name='description' content='')
-    title Đăng ký phỏng vấn - vị trí #{vitri}
+    title Đăng ký tham gia Ban Học Tập
     link(rel='stylesheet' href='/public/source/css/nicepage.css' media='screen')
     link(rel='stylesheet' href='/public/source/css/XetTuyen.css' media='screen')
+    link(rel='icon' href='/public/source/images/Logo.png')
+
     script.u-script(type='text/javascript' src='/public/source/js/jquery.js' defer='')
     script.u-script(type='text/javascript' src='/public/source/js/script.js' defer='')
     script.u-script(type='text/javascript' src='/public/source/js/nicepage.js' defer='')
