--- a/public/email/index.pug
+++ b/public/email/index.pug
@@ -138,6 +138,7 @@ html(xmlns='http://www.w3.org/1999/xhtml' xmlns:v='urn:schemas-microsoft-com:vml
                                 h1.v-line-height.v-font-size(style="margin: 0px; line-height: 130%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Montserrat',sans-serif; font-size: 24px;")
                                   div
                                     p
+                                      strong Chào #{name} nhé! 
                                       strong Bạn đã đăng ký tham gia xét tuyển vào 
                                       strong vị trí #{position} của 
                                       strong Ban Học Tập thành công!
